# ToolchainCore

./: .gitignore  CCC_scope.md  CMakeLists.txt  README.md  features_todo.md  issues_todo.md
docs/: doc.md
src/: test_main.cpp
src/ccc/: ccc_global.h  engine.cpp  engine.h  environment.cpp  environment.h  types.h
src/ccc/backends/: compilerbackend.h  externalcompilerbackend.cpp  externalcompilerbackend.h  internaltccbackend.cpp  internaltccbackend.h
